web/src/app/sidebar/sidebar.component.css
#mt-sidebar {
    width: 225px;
    height: 100vh;

    top: 0;
    left: 0;
    position: fixed;

    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
}

#mt-sidebar-logo {
    width: 100%;
    padding: 40px;
}

#mt-sidebar-links .mt-sidebar-link {
    width: 100%;
    height: 40px;

    padding-right: 20px;
    margin-bottom: 10px;

    display: block;

    color: #777;
    font-family: 'Raleway', Helvetica, Arial, Lucida, sans-serif;
    font-size: 18px;
    font-weight: 600;
    letter-spacing: 1px;
    line-height: 40px;
    text-align: right;
    text-decoration: none;
    user-select: none;
}

#mt-sidebar-links .mt-sidebar-link.active {
    color: white;
    background-color: #B6DBE4;
}

#mt-sidebar-links .mt-sidebar-link:hover:not(.active) {
    background-color: #f1f1f1;
}

